# contest-crawler

./: Cargo.toml  README.md
.github/workflows/: rss_crawler.yml
etc-rss/: dacon_rss.xml
public/etc-rss/: campus_pick_rss.xml  merged_rss.xml  wevity_rss.xml
src/: campuspick.rs  dacon.rs  main.rs  notice.rs  rss_merged.rs  rss_write.rs  wevity.rs
