[package]
name = "etc_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rss = "2"
chrono = { version = "0.4", features = ["clock","serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
thirtyfour = "0.36.1"
reqwest = { version = "0.12", features = ["blocking","json", "gzip", "deflate", "brotli", "cookies", "rustls-tls"] }
headless_chrome = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
once_cell = "1"
scraper = "0.19"